--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
                         <i class="fa-solid fa-lock"></i>
                         <input type="password" placeholder="Password">
                     </div>
+                    <p>Forgot Password? <a href="#">Click Here</a></p>
+                </div>
+
+                <div class="btn-field">
+                    <button type="button">Sign in</button>
+                    <button type="button">Sign up</button>
                 </div>
             </form>
         </div>
