--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                 </div>
 
                 <div class="btn-field">
-                    <button type="button">Sign in</button>
                     <button type="button">Sign up</button>
+                    <button type="button" class="disabled">Sign in</button>
                 </div>
             </form>
         </div>
