--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <div class="container">
         <div class="form-box">
-            <h1>Sign Up</h1>
+            <h1 id="title">Sign Up</h1>
             <form>
                 <div class="input-group">
-                    <div class="input-field">
+                    <div class="input-field" id="name-field">
                         <i class="fa-solid fa-user"></i>
                         <input type="text" placeholder="Name">
                     </div>
@@ -31,14 +31,13 @@
                 </div>
 
                 <div class="btn-field">
-                    <button type="button">Sign up</button>
-                    <button type="button" class="disabled">Sign in</button>
+                    <button type="button" id="signupBtn">Sign up</button>
+                    <button type="button" class="disabled" id="signinBtn">Sign in</button>
                 </div>
             </form>
         </div>
     </div>
     
-
 
     <script src="./script.js"></script>
 </body>
