--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1 id="title">Sign Up</h1>
             <form>
                 <div class="input-group">
-                    <div class="input-field" id="name-field">
+                    <div class="input-field" id="nameField">
                         <i class="fa-solid fa-user"></i>
                         <input type="text" placeholder="Name">
                     </div>
